<resources>
    <string name="app_name">My Movie Menoir</string>
    <string name="sigin_welcome">Welcome to My Movie Menoir</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="signin_button">Sign In</string>
    <string name="join_us">Want to watch together? Join us here!</string>
    <string name="forget_password">Forget password?</string>
    <string name="M3_logo">M3 logo</string>
    <string name="register_p1_title">How may I call you</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="dob">Date of Birth</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="register_p2_title">Where do you live?</string>
    <string name="street_address">Street Address</string>
    <string name="postcode">Postcode</string>
    <string name="state">State</string>
    <string name="register_p3_title">Tell me about you</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="Submit">Submit</string>
    <string name="Back">Go Back</string>
    <string name="title_activity_nav_home">My Movie Menoir</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="nav_header_title">My Movie Menoir</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date_error">Current Date not available</string>
    <string name="name_error">Name not available</string>
    <string name="data_error">Data not available</string>
    <string name="greeting">Greeting</string>
    <string name="top_five">My top Five of the year</string>
    <string name="search_bar_hint">What\'s in your mind?</string>
    <string name="search_title">Movie Search</string>
    <string name="online_rating">Online rating:</string>
    <string name="movie_view_watchlist">Watch later</string>
    <string name="movie_view_memoir">Add to Memoir</string>
    <string name="movie_name">Movie Name</string>
    <string name="release_date">Release Date</string>
    <string name="my_rating">My Rating</string>
    <string name="search">Search</string>
    <string name="imdb_rating">IMDb Rating</string>
    <string name="watch_date">Watch Date</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="directed_by">Directed by</string>
    <string name="cast">Cast</string>
    <string name="summary">Summary</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="add_to_memoir_add_cinema">Not on the list? Click here to add it</string>
    <string name="add_cinema_title">Add cinema</string>
    <string name="cinema_name">Cinema name</string>
    <string name="time_added">Time added</string>

    <string name="watchlist_title">Your Watchlist</string>
    <string name="delete">Delete</string>
    <string name="view_movie">View movie</string>

    <string name="add_to_memoir_title">Add to Memoir</string>
    <string name="add_to_memoir_description">Just a but more info</string>
    <string name="memoir_watch_date_time">When did you watch it?</string>
    <string name="memoir_watch_area">Where did you watch it?</string>
    <string name="memoir_watch_comment">What do you think?</string>
    <string name="comment">Comment</string>
    <string name="rating">Your rating</string>
    <string name="suburb">Cinema suburb</string>

    <string name="memoir_title">My Movie Memoir</string>
    <string name="sort_by">Sort by:</string>
    <string name="date">Watch date</string>
    <string name="your_rating">Your Rating</string>
    <string name="public_rating">Online Rating</string>

    <string name="report_title">Report</string>
    <string name="plot">Plot result</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="loading_message">Wait, I\'m asking around</string>
    <string name="pie_chart_title">Total number of movies watched per postcode during the period</string>
    <string name="bar_chart_title">Total number of movies watched per month in the year</string>
    <string name="report_barChart_spinner_description">Pick a year:</string>
    <string name="title_activity_maps">Map</string>

</resources>
